--- a/Maude.tex
+++ b/Maude.tex
@@ -10,7 +10,7 @@ The Maude system has been used for a variety of specification and verification t
 ETCS has been verified in the form of hybrid automata by translating the automata into a program and then performing model checking using the post condition calculus \cite{DI13}. The Hi-Maude system \cite{MF11} is an extension of Real Time Maude designed specifically for modelling interacting hybrid systems and as such it can handle differential equations. It has been used in a case study to model the effects of extreme heat on the human body \cite{MF12}. It is geared towards systems of a highly dynamic nature and may be overkill for a system such as ERTMS with a large discrete component; however a comparison of the approaches might still be interesting as future work.
 
 
-There have been several attempts to model and verify parts of the ERTMS system. The scale of the system and differences in implementations from one country to another both make its formalisation challenging. A subset of the systems requirements specification of ERTMS in UML consisting of high level discrete modes and transitions was captured, formalised and verified using the SMV model checker \cite{MG14}. A variety of properties were checked including safety and liveness which were formalised using modes of the system. One safety condition -- the ETCS on-board never leaves the TRIP mode (TR) before the driver has acknowledged the trip and the train has stopped\footnote{a train enters the TRIP mode after it has over run its stopping point.} -- was formalised as an LTL formula with a boolean variable to represent that the train has stopped; it was then successfully verified using SMV. Our work attempts to capture the more concrete behaviour of the overall system including the physical behaviour of trains such as their speed and that of the highly safety critical interface between ERTMS and the interlocking. 
+There have been several attempts to model and verify parts of the ERTMS system. The scale of the system and differences in implementations from one country to another both make its formalisation challenging. A subset of the systems requirements specification of ERTMS in UML consisting of high level discrete modes and transitions was captured, formalised and verified using the SMV model checker \cite{MG14}. A variety of properties were checked including safety and liveness which were formalised using modes of the system. One safety condition -- the ETCS on-board never leaves the TRIP mode (TR) before the driver has acknowledged the trip and the train has stopped\footnote{a train enters the TRIP mode after it has over run its stopping point.} -- was formalised as an LTL formula with a Boolean variable to represent that the train has stopped; it was then successfully verified using SMV. Our work attempts to capture the more concrete behaviour of the overall system including the physical behaviour of trains such as their speed and that of the highly safety critical interface between ERTMS and the interlocking. 
 
 There has been a large amount of work on the modelling and verification of ETCS using differential dynamic logic \cite{AP08} in the Keymaera tool \cite{AP08b}. The RBC handover where a train moves from the area governed by one RBC into another has been modelled in \cite{YL11}. The properties proven in this study include non-derailment and non-collision of trains which follows from correct handover and new movement authority generation. ETCS \cite{AP09} itself has been modelled as a dynamical system with external disturbances and verified for safety in terms of collision avoidance, liveness, controllability and reactivity.
 
@@ -501,9 +501,9 @@ class Inter | state : InterState, reqid : Nat,
       t3 : Bool, t4 : Bool .
 \end{lstlisting}
 
-The sort \texttt{InterState} models the state of the interlocking along with two constant operations \texttt{idle} and \texttt{res} which represent the two states. The interlocking class consists of a interlocking state, a request id which stores the current track segment requestions and five booleans which indicate whether or not a track segment is occupied. 
+The sort \texttt{InterState} models the state of the interlocking along with two constant operations \texttt{idle} and \texttt{res} which represent the two states. The interlocking class consists of a interlocking state, a request id which stores the current track segment requestions and five Booleans which indicate whether or not a track segment is occupied. 
 
-All of the rewrite rules on interlocking objects are instantaneous and do not affect the transition of time.  We can split these rules into two types. Firstly there are interlocking rules that deal with the transition of a train from one track segment to another. Secondly there are several rewriting rules that deal with granting or denying a received request. There is currently a rule for both denying and granting a request for each track segment depending on the value of the boolean variable.
+All of the rewrite rules on interlocking objects are instantaneous and do not affect the transition of time.  We can split these rules into two types. Firstly there are interlocking rules that deal with the transition of a train from one track segment to another. Secondly there are several rewriting rules that deal with granting or denying a received request. There is currently a rule for both denying and granting a request for each track segment depending on the value of the Boolean variable.
 
 \begin{lstlisting}[caption = The interlocking transition which grants a track segment request]
 rl [resreq1g] : {< O : Inter | state : res, t
@@ -560,7 +560,7 @@ The controller class contains three parameters which are used to store a list of
 The controller object makes one join request, using a \texttt{reqjoin} message containing the object identifier of the first train in the \texttt{trainorder} list and its associated route, to the RBC per unit of time. If this request is granted then the first object identifier in the \texttt{trainorder} list is removed and a new train object is created with that object identifier with its maximum speed and route obtained from the mappings in the controller object. The speed and distance of the new train are both set to zero and a message is sent to the interlocking indicating that the initial track segment is now occupied. 
 
 \subsection*{Modified Trains, Interlockings and Radio Block Processors}
-The component classes from the pentagon example have been modified to capture the behaviour of a junction.  The train class has seen the least modification, with only one additional parameter route which stores a natural number corresponding to the train's route. The RBC class has been modified to include a additional mapping from object identifiers to the natural numbers that contains the route of each train. The number of states of an RBC has increased from three to four with an extra state $\mathbf{waitjoin}$ capturing that a join request has been made. When a join request is made the RBC checks to see if the route requested is currently set. If the route requested is set and the initial track segment is clear then the join request is accepted. If the route is not set then the RBC checks with the interlocking that it can set the route. This requires that the first three track segments are clear in order to change the direction of the point. The interlocking class has been modified to capture both the behaviour of the point and the addition of join requests. The point is modelled in the interlocking as two boolean variables: $\mathbf{p1n}$ which indicates that the point is driven normal and $\mathbf{p1r}$ which indicates that the point is driven in the reverse direction.
+The component classes from the pentagon example have been modified to capture the behaviour of a junction.  The train class has seen the least modification, with only one additional parameter route which stores a natural number corresponding to the train's route. The RBC class has been modified to include a additional mapping from object identifiers to the natural numbers that contains the route of each train. The number of states of an RBC has increased from three to four with an extra state $\mathbf{waitjoin}$ capturing that a join request has been made. When a join request is made the RBC checks to see if the route requested is currently set. If the route requested is set and the initial track segment is clear then the join request is accepted. If the route is not set then the RBC checks with the interlocking that it can set the route. This requires that the first three track segments are clear in order to change the direction of the point. The interlocking class has been modified to capture both the behaviour of the point and the addition of join requests. The point is modelled in the interlocking as two Boolean variables: $\mathbf{p1n}$ which indicates that the point is driven normal and $\mathbf{p1r}$ which indicates that the point is driven in the reverse direction.
 %
 The RBC has been modified to process any requests in one time step using an operation $\mathbf{nondelta}$ which prevents the transition of time in any non-idle state. This removes the possibility for a train to take an arbitrary amount of time to respond to a request, significantly cutting down on the state space.
 
