--- a/BackgroundERTMS.tex
+++ b/BackgroundERTMS.tex
@@ -2,7 +2,7 @@
 \chaptermark{The European Rail Traffic Management System}
 \label{chapter:ERTMS}
 
-Following the successful use of the solid state interlocking for over 30 years railway engineers are  employing modern technologies to develop a new kind of train control system.  Technologies such as GPS and mobile data communications, in the form of GSM radio,  allow for  a much finer grain of control than the traditional discrete solid state interlocking and  boolean track circuits alone would allow. 
+Following the successful use of the solid state interlocking for over 30 years railway engineers are  employing modern technologies to develop a new kind of train control system.  Technologies such as GPS and mobile data communications, in the form of GSM radio,  allow for  a much finer grain of control than the traditional discrete solid state interlocking and  Boolean track circuits alone would allow. 
 This has led to the development of the European Rail Traffic Management System (ERTMS) which combines the traditional discrete control systems of the railway with modern systems that can deal with more continuous data. The name ERTMS is often used interchangeably with the name \emph{European Train Control System} (ETCS) which is used to describe the same control system but without the GSM radio component. This new system consists of a \emph{radio block processor} (RBC) which negotiates with the traditional interlocking in order to grant lengths of track to a train in the form of a \emph{movement authority} (MA). In this system every train has a movement authority which allocates it a length of track within which it can move. The RBC also provides the train with a \emph{static speed profile} which restricts the speed of the train on different segments of track. Each individual train has an onboard system which restricts its speed to follow this profile and ensures that the train will have braked and stopped before reaching the end of its movement authority. The onboard system has an emergency braking mode in case one of these conditions is broken. The trains are free to move along the  track within their current MA and communicate their position, speed and requests for further segments of track over radio to the radio block processor. The ERTMS system is split into different levels of implementation (See \ref{sec:theertms}.) that allow for different stages of delivery. In the most advanced level 3 all trains must be equipped with the ERTMS system in order to use the tracks; earlier levels allow for a mixture of trains with and without ERTMS. The RBC communicates with trains via GSM in ERTMS level 2 and 3 and via track-side balises in level 1. The interlocking itself is not formally considered to be a part of ERTMS, however the interface to the interlocking is a key part of this system. In this thesis we are mainly concerned with the ERTMS level 2 which in a later chapter is verified as part of a combined interlocking and RBC system. An overview of the ERTMS system can be found in the ETCS implementation handbook \cite{ETCSHB} and an in depth description of the system can be found in the ETCS System Requirements Specification \cite{ETCSSRS}.
 
 \afterpage{
