--- a/BackgroundSAT.tex
+++ b/BackgroundSAT.tex
@@ -5,7 +5,7 @@ In the following we shall present the satisfiability problem and  algorithms whi
 
 
 \section{The Satisfiability Problem}
-In the following section we will introduce some preliminaries followed by the boolean satisfaction problem, which is the problem of finding a set of assignments to the variables of a formula such that the formula itself becomes true. The majority of modern algorithms for solving this problem work on propositional formulas in \emph{conjunctive normal form}. That is the formula is a conjunction of clauses which are themselves disjunctions of literals. This encoding has the advantage that it has a very simple and structured form making algorithm implementation easier. In order to apply most modern SAT solvers typically one has to first encode the SAT problem as a CNF formula. There are a number of translations available; some naive approaches can exponentially increase the size of the resulting formula. In the following we look at the most commonly used encoding called the Tseitin Expansion \cite{GT83}.
+In the following section we will introduce some preliminaries followed by the Boolean satisfaction problem, which is the problem of finding a set of assignments to the variables of a formula such that the formula itself becomes true. The majority of modern algorithms for solving this problem work on propositional formulas in \emph{conjunctive normal form}. That is the formula is a conjunction of clauses which are themselves disjunctions of literals. This encoding has the advantage that it has a very simple and structured form making algorithm implementation easier. In order to apply most modern SAT solvers typically one has to first encode the SAT problem as a CNF formula. There are a number of translations available; some naive approaches can exponentially increase the size of the resulting formula. In the following we look at the most commonly used encoding called the Tseitin Expansion \cite{GT83}.
 \medskip
 \begin{mydef}[Preliminaries]
 We define the following preliminaries to use when referring to DPLL SAT algorithms:
@@ -41,22 +41,22 @@ $\forall l \,( l \in \Gamma \to \mybar{l} \notin \Gamma)$.
 We let $\consvals$ denote the set of all consistent valuations.
 
 
-\item A \emph{model} is a total function $M$ which maps literals to booleans and satisfies the property
+\item A \emph{model} is a total function $M$ which maps literals to Booleans and satisfies the property
 %
 $\forall l \, (M \ l \leftrightarrow \neg M \ \mybar{l})$.
 %
 \end{enumerate}
 %
-We shall use the abbreviations 
+We shall use the abbreviations: 
 %
 \begin{itemize}
 %
 \item $M \models \Gamma$, for $\forall l \in \Gamma \, (M \ l)$ 
-(`$M$ is a model of $\Gamma$'),
+(`$M$ is a model of $\Gamma$')
 %
 \item $M \models \Delta$, for 
 $\forall C \in \Delta \, \exists l \in C \,(M \ l)$ 
-(`$M$ is a model of $\Delta$').
+(`$M$ is a model of $\Delta$')
 %
 \end{itemize}
 %
@@ -89,7 +89,7 @@ In the following we use the notations $X,a := \{x \mid x\in X \lor x = a\}$
 $X\setminus a := \{x \mid x\in X \land x \neq a\}$ (removing $a$ from $X$).
 %
 \medskip
-\begin{mydef}[The boolean satisfiability (SAT) problem]
+\begin{mydef}[The Boolean satisfiability (SAT) problem]
 Given a formula $\Delta$, does there exist a valuation $\Gamma$ such that:
 $$\Gamma \models \Delta$$
 \end{mydef}
@@ -203,7 +203,7 @@ One major improvement to the standard DPLL algorithm is \emph{clause learning} w
 The first clause learning algorithm was GRASP \cite{MS99,MS96} which exploited the structure of conflicts and learned new clauses during backtracking search. This was greatly improved on by Chaff \cite{LZ01} which included the two watched literal data structure and a heuristic which received feedback from the clause learning process. MiniSAT \cite{NE04} the minimalistic SAT solver takes the optimisations from Chaff and GRASP and tries to structure them in such a way that the SAT solver is easily extended and that one has access to the internal workings of the solver for customisation.
 
 Similarly to the DPLL algorithms, conflict driven clause learning algorithms take as input a formula $\Delta$ in Conjunctive Normal Form. 
-A valuation in a clause learning algorithm is typically a total function $\Gamma : \var{\Delta} \to \{0,1,u\}$ that maps to boolean variables of the formula $\Delta$ to a value $0,1$ or $u$ the unassigned value. The depth at which a boolean variable $x$ is assigned a value $\{0,1\}$ in the search tree is called the decision level, which is represented as a function $\delta(x) \in \{-1,0,1, \ldots, |\var{\Delta}| \} $. Instead of removing literals from clauses when they are set to $0$ or removing a clause from the formula when it contains a literal set to $1$ all clauses and their corresponding literals remain in the clause during the search. A mapping $\alpha(x)$ is created associating a boolean variable x with a clause $C$ if that variable is assigned by the unit rule applied to $C$. If a variable $x$ does not have such an antecedent then $\alpha(x) = NIL$.
+A valuation in a clause learning algorithm is typically a total function $\Gamma : \var{\Delta} \to \{0,1,u\}$ that maps to Boolean variables of the formula $\Delta$ to a value $0,1$ or $u$ the unassigned value. The depth at which a Boolean variable $x$ is assigned a value $\{0,1\}$ in the search tree is called the decision level, which is represented as a function $\delta(x) \in \{-1,0,1, \ldots, |\var{\Delta}| \} $. Instead of removing literals from clauses when they are set to $0$ or removing a clause from the formula when it contains a literal set to $1$ all clauses and their corresponding literals remain in the clause during the search. A mapping $\alpha(x)$ is created associating a Boolean variable x with a clause $C$ if that variable is assigned by the unit rule applied to $C$. If a variable $x$ does not have such an antecedent then $\alpha(x) = NIL$.
 
 \subsection*{Conflict Analysis}
 The CDCL SAT algorithms cut down on the possible search space for a satisfying assignment by analysing and learning new clauses from conflicts. The causes of the conflict are analysed to see which decision assignments led to the conflict arising. The learned clause contains a negation of these literals such that if it was already in the formula it would have caused the conflict to arise earlier. The decisions and implications that led to the conflict can be seen as forming a graph called a \emph{conflict graph} an example of which can be see in Fig. \ref{fig:conflictgraph}. The literals which are negated to form the learned clause can be seen as forming a bar or cut across the conflict graph. Any of these cuts can be used as learned clauses, however typically the smallest clauses perform better in practice. The majority of modern SAT algorithms try to exploit \emph{unit implication points} (UIP) which are bottlenecks in the conflict graph which form an alternative decision assignment that will cause a conflict in the same clause. Formally a UIP is a dominator in that all paths from the  original decision assignment to the conflict must pass through the UIP node in the graph. 
