Made changes to SAT chapter and further changes to logic chapter and introduction.

--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -521,11 +521,11 @@ r_1 \ \textbf{r} \ A \wedge r_2  \ \textbf{r} \ B & \quad \text{otherwise} \\
 \begin{mytheorem}
 \emph{(Soundness Theorem)}
 
-If $M$ is a proof of a closed formula $B$, then we can derive  $ \llbracket M \rrbracket \ \textbf{r} \ B$.
+If $M$ is a natural deduction, intuitionistic, first order logic proof of a closed formula $B$, then we can derive  $ \llbracket M \rrbracket \ \textbf{r} \ B$.
 
 \begin{proof}
 
-The proof proceeds by performing induction on the proof term $M$, we omit further details (See \cite{HS14}).
+The proof proceeds by performing induction on the proof term $M$, we omit further details (See \cite{HS14} 4.3.6).
 
 \begin{comment}
 \begin{description}
