--- a/Introduction.tex
+++ b/Introduction.tex
@@ -125,7 +125,7 @@ The following computer was used for all benchmarks and tests run as part of this
 \begin{center}
 \begin{tabular}{| l | c |} \hline
 Operating system: & Ubuntu 14.04 LTS  \\ \hline
-Processor: & Intel(R) Core(TM) i7 64 bit CPU with 8 cores at 2.93GHz  \\ \hline 
+Processor: & Intel(R) Core(TM) i7 870 64 bit quad core CPU at 2.93GHz  \\ \hline 
 Memory: & 8 GBs 1333 MHz DDR2 RAM \\ \hline
 Hard disk: &  750GB 7200 RPM  SATA\\  \hline 
 \end{tabular}
